// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden Master — /start screens per lifecycleState > EXPIRED 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "open_focus_payment",
          "text": "ПРОДОВЖИТИ ПІДПИСКУ",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ завершився.

<blockquote>Пам’ятаємо, де ти зупинилась. Дані, ритм і прогрес — на місці.</blockquote>

<b>Наступний крок:</b> обери формат відновлення нижче, щоб <b>продовжити</b> Zoom-практики.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > FOCUS_PAID — fallback (summary unresolved) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ЗАПИСАТИСЯ",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar?intent=booking&v=<normalized>",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до <b>15 листопада 2026 р</b>.
Найближча Zoom-практика — <b>3 серпня о 19:00</b>.
Ти ще не записана.

<blockquote>Тема вже є. Її не треба далі носити в голові — її треба занести в живу практику.</blockquote>

<b>Наступний крок:</b> запишись на найближчу Zoom-практику.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > FOCUS_PAID — with resolved summary 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ЗАПИСАТИСЯ",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar?intent=booking&v=<normalized>",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до <b>15 листопада 2026 р</b>.
Найближча Zoom-практика — <b>3 серпня о 19:00</b>.
Ти ще не записана.

<blockquote>Тема вже є. Її не треба далі носити в голові — її треба занести в живу практику.</blockquote>

<b>Наступний крок:</b> запишись на найближчу Zoom-практику.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > NEW_USER 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:start",
          "text": "ПОЧАТИ ТЕСТ",
        },
      ],
    ],
  },
  "text": "Тестова

Привіт.

Це тест AB System: <b>Чому ти відкладаєш те що давно хочеш зробити?</b>

Він допоможе побачити чому ти знову переносиш важливе і <b>з чого почати</b>.

Тут не буде складних питань. Просто відповідай так як є зараз.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > NEW_USER without firstName — no header line 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:start",
          "text": "ПОЧАТИ ТЕСТ",
        },
      ],
    ],
  },
  "text": "Привіт.

Це тест AB System: <b>Чому ти відкладаєш те що давно хочеш зробити?</b>

Він допоможе побачити чому ти знову переносиш важливе і <b>з чого почати</b>.

Тут не буде складних питань. Просто відповідай так як є зараз.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > OFFER_SHOWN + NO_ACCESS 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "open_focus_payment",
          "text": "ХОЧУ У ФОКУС →",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
    ],
  },
  "text": "Тестова

У тебе вже є <b>результат</b> тесту.

Хочеш відкрити його ще раз або пройти тест заново?",
}
`;

exports[`Golden Master — /start screens per lifecycleState > POST_ZOOM_1 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "post_zoom:leave_insight",
          "text": "ЗАЛИШИТИ ІНСАЙТ",
        },
      ],
      [
        {
          "callback_data": "focus:next_zoom",
          "text": "КАЛЕНДАР",
        },
      ],
    ],
  },
  "text": "Тестова

🌿 <b>Практика завершилась.</b>

<blockquote>Головне після Zoom — не розсипати побачене на нові думки. Тримай один висновок і один крок.</blockquote>

Зафіксуй для себе дві речі:
<b>1. Який інсайт був найціннішим?</b>
<b>2. Який один крок зробиш до наступної практики?</b>

<b>Наступний крок:</b> залиш інсайт одним повідомленням.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_DONE + NO_ACCESS 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "callback_data": "open_focus_payment",
          "text": "ХОЧУ У ФОКУС →",
        },
      ],
    ],
  },
  "text": "Тестова

Твій <b>результат</b> готовий. Подивись висновок і переходь до наступного кроку у ФОКУС.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_DONE without result (edge case) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "callback_data": "open_focus_payment",
          "text": "ХОЧУ У ФОКУС →",
        },
      ],
    ],
  },
  "text": "Тестова

Твій <b>результат</b> готовий. Подивись висновок і переходь до наступного кроку у ФОКУС.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_IN_PROGRESS (recent) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:resume",
          "text": "ПРОДОВЖИТИ ТЕСТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "🔄 ПРОЙТИ ЗАНОВО",
        },
      ],
    ],
  },
  "text": "Тестова

<b>Тест уже відкритий.</b>

<blockquote>Зараз важливо не збирати нову версію відповіді, а <b>продовжити</b> з того місця, де твій рух уже почав складатися.</blockquote>

<b>Наступний крок:</b> продовж тест з останнього питання.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_IN_PROGRESS (stale, >168h) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:resume",
          "text": "ПРОДОВЖИТИ",
        },
        {
          "callback_data": "ab_test:restart",
          "text": "ПОЧАТИ ЗАНОВО",
        },
      ],
    ],
  },
  "text": "Тестова

Ти вже починала тест, але пройшло більше тижня.

Відповіді можуть бути неактуальні.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > TEST_NOT_STARTED 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "ab_test:start",
          "text": "ПОЧАТИ ТЕСТ",
        },
      ],
    ],
  },
  "text": "Тестова

Ти вже тут.

Натисни "Пройти тест", щоб почати.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > UPSELL 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "callback_data": "focus:next_zoom",
          "text": "КАЛЕНДАР",
        },
      ],
    ],
  },
  "text": "Тестова

<b>ФОКУС працює тоді, коли ти тримаєш ритм.</b>

<blockquote>Рух не тримається сам по собі. Його тримає конкретна практика, до якої ти повертаєшся вчасно.</blockquote>

Зараз важливо не додавати нове, а <b>продовжити</b> той ритм, який уже почався.

<b>Наступний крок:</b> відкрий календар і обери найближчу Zoom-практику.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > ZOOM_MEMBER — fallback (summary unresolved) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ПЕРЕГЛЯНУТИ ЗАПИС",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до <b>15 листопада 2026 р</b>.
Найближча Zoom-практика — <b>3 серпня о 19:00</b>.
Ти вже записана.

<blockquote>Рух уже зафіксований у практиці. Тепер важливо зайти туди з однією конкретною темою.</blockquote>

<b>Наступний крок:</b> відкрий запис і підготуй одну ситуацію для Zoom.",
}
`;

exports[`Golden Master — /start screens per lifecycleState > ZOOM_MEMBER — with resolved summary (composed with Zoom section) 1`] = `
{
  "parseMode": "HTML",
  "reply_markup": {
    "inline_keyboard": [
      [
        {
          "text": "ПЕРЕГЛЯНУТИ ЗАПИС",
          "web_app": {
            "url": "http://localhost:5173/miniapp/zoom-calendar",
          },
        },
      ],
      [
        {
          "callback_data": "ab_test:show_result",
          "text": "ПЕРЕГЛЯНУТИ РЕЗУЛЬТАТ",
        },
      ],
      [
        {
          "callback_data": "ab_test:restart",
          "text": "ПРОЙТИ ТЕСТ ЩЕ РАЗ",
        },
      ],
      [
        {
          "text": "КАНАЛ ФОКУСУ",
          "url": "https://t.me/focus-channel",
        },
      ],
    ],
  },
  "text": "Тестова

Твій доступ до ФОКУСУ активний до <b>15 листопада 2026 р</b>.
Найближча Zoom-практика — <b>3 серпня о 19:00</b>.
Ти вже записана.

<blockquote>Рух уже зафіксований у практиці. Тепер важливо зайти туди з однією конкретною темою.</blockquote>

<b>Наступний крок:</b> відкрий запис і підготуй одну ситуацію для Zoom.",
}
`;
